--- a/doc/smart_ptr/make_shared.adoc
+++ b/doc/smart_ptr/make_shared.adoc
@@ -8,8 +8,8 @@ http://www.boost.org/LICENSE_1_0.txt
 ////
 
 [#make_shared]
-# make_shared
+# make_shared: Creating shared_ptr
 :toc:
 :toc-title:
-:idprefix:
+:idprefix: make_shared_
 
