--- a/doc/smart_ptr/make_unique.adoc
+++ b/doc/smart_ptr/make_unique.adoc
@@ -8,8 +8,8 @@ http://www.boost.org/LICENSE_1_0.txt
 ////
 
 [#make_unique]
-# make_unique
+# make_unique: Creating unique_ptr
 :toc:
 :toc-title:
-:idprefix:
+:idprefix: make_unique_
 
