--- a/doc/smart_ptr/make_unique.adoc
+++ b/doc/smart_ptr/make_unique.adoc
@@ -40,20 +40,25 @@ feature with `std::make_unique`.
 [subs=+quotes]
 ```
 namespace boost {
+  // only if T is not an array type
   template<class T, class... Args>
     std::unique_ptr<T> make_unique(Args&&... args);
 
+  // only if T is not an array type
   template<class T>
     std::unique_ptr<T> make_unique(_see below_ v);
 
+  // only if T is an array type of the form U[]
   template<class T>
-    std::unique_ptr<T> make_shared(std::size_t n);
+    std::unique_ptr<T> make_unique(std::size_t n);
 
+  // only if T is not an array type
   template<class T>
-    std::unique_ptr<T> make_shared_noinit();
+    std::unique_ptr<T> make_unique_noinit();
 
+  // only if T is an array type of the form U[]
   template<class T>
-    std::unique_ptr<T> make_shared_noinit(std::size_t n);
+    std::unique_ptr<T> make_unique_noinit(std::size_t n);
 }
 ```
 
@@ -78,7 +83,7 @@ template<class T>
 Remarks:::
 * These overloads shall only participate in overload resolution when `T` is
 not an array type.
-* The type of `v` is `std::remove_reference_t<T>&&`.
+* The type of `v` is equivalent to `std::remove_reference_t<T>&&`.
 Returns::: `std::unique_ptr<T>(new T(std::move(v))`.
 Example::: `auto p = make_unique<std::vector<int> >({1, 2});`
 
@@ -88,8 +93,8 @@ template<class T>
 ```
 ::
 Remarks::: These overloads shall only participate in overload resolution when
-`T` is an array type of the form `__U__[]`.
-Returns::: `std::unique_ptr<__U__[]>(new __U__[n]())`.
+`T` is an array type of the form `U[]`.
+Returns::: `std::unique_ptr<U[]>(new U[n]())`.
 Example::: `auto p = make_unique<double[]>(1024);`
 
 ```
@@ -108,6 +113,6 @@ template<class T>
 ```
 ::
 Remarks::: These overloads shall only participate in overload resolution when
-`T` is an array type of the form `__U__[]`.
-Returns::: `std::unique_ptr<__U__[]>(new __U__[n])`.
+`T` is an array type of the form `U[]`.
+Returns::: `std::unique_ptr<U[]>(new U[n])`.
 Example::: `auto p = make_unique_noinit<double[]>(1024);`
