--- a/doc/smart_ptr/make_shared.adoc
+++ b/doc/smart_ptr/make_shared.adoc
@@ -55,43 +55,43 @@ types.
 [subs=+quotes]
 ```
 namespace boost {
-  // only if T is not an array type
+  `// only if T is not an array type`
   template<class T, class... Args>
     shared_ptr<T> make_shared(Args&&... args);
   template<class T, class A, class... Args>
     shared_ptr<T> allocate_shared(const A& a, Args&&... args);
 
-  // only if T is an array type of the form U[]
+  `// only if T is an array type of the form U[]`
   template<class T>
     shared_ptr<T> make_shared(std::size_t n);
   template<class T, class A>
     shared_ptr<T> allocate_shared(const A& a, std::size_t n);
 
-  // only if T is an array type of the form U[N]
+  `// only if T is an array type of the form U[N]`
   template<class T>
     shared_ptr<T> make_shared();
   template<class T, class A>
     shared_ptr<T> allocate_shared(const A& a);
 
-  // only if T is an array type of the form U[]
+  `// only if T is an array type of the form U[]`
   template<class T>
     shared_ptr<T> make_shared(std::size_t n, _see below_ v);
   template<class T, class A>
     shared_ptr<T> allocate_shared(const A& a, std::size_t n, _see below_ v);
 
-  // only if T is an array type of the form U[N]
+  `// only if T is an array type of the form U[N]`
   template<class T>
     shared_ptr<T> make_shared(_see below_ v);
   template<class T, class A>
     shared_ptr<T> allocate_shared(const A& a, _see below_ v);
 
-  // only if T is not an array type of the form U[]
+  `// only if T is not an array type of the form U[]`
   template<class T>
     shared_ptr<T> make_shared_noinit();
   template<class T, class A>
     shared_ptr<T> allocate_shared_noinit(const A& a);
 
-  // only if T is an array type of the form U[N]
+  `// only if T is an array type of the form U[N]`
   template<class T>
     shared_ptr<T> make_shared_noinit(std::size_t n);
   template<class T, class A>
