--- a/doc/smart_ptr/make_unique.adoc
+++ b/doc/smart_ptr/make_unique.adoc
@@ -46,7 +46,7 @@ namespace boost {
 
   `// only if T is not an array type`
   template<class T>
-    std::unique_ptr<T> make_unique(_see below_ v);
+    std::unique_ptr<T> make_unique(remove_reference_t<T>&& v);
 
   `// only if T is an array type of the form U[]`
   template<class T>
@@ -74,16 +74,14 @@ Remarks::: These overloads shall only participate in overload resolution when
 Returns::: `std::unique_ptr<T>(new T(std::forward<Args>(args)$$...$$)`.
 Example::: `auto p = make_unique<int>();`
 
-[subs=+quotes]
 ```
 template<class T>
-  std::unique_ptr<T> make_unique(_see below_ v);
+  std::unique_ptr<T> make_unique(remove_reference_t<T>&& v);
 ```
 ::
 Remarks:::
 * These overloads shall only participate in overload resolution when `T` is
 not an array type.
-* The type of `v` is equivalent to `std::remove_reference_t<T>&&`.
 Returns::: `std::unique_ptr<T>(new T(std::move(v))`.
 Example::: `auto p = make_unique<std::vector<int> >({1, 2});`
 
