--- a/doc/smart_ptr/make_shared.adoc
+++ b/doc/smart_ptr/make_shared.adoc
@@ -133,16 +133,16 @@ of the object is initialized to the corresponding element from `v`.
 shall be interpreted to mean that each array element of the object is
 value-initialized.
 * When a (sub)object of non-array type `U` is specified to be initialized to
-a value `v`, or constructed from `args$$...$$`, `make_shared` shall perform
+a value `v`, or constructed from `args\...`, `make_shared` shall perform
 this initialization via the expression `::new(p) U(expr)` (where
-`_expr_` is `v` or `std::forward<Args>(args)$$...$$)` respectively) and `p`
+`_expr_` is `v` or `std::forward<Args>(args)\...)` respectively) and `p`
 has type `void*` and points to storage suitable to hold an object of type
 `U`.
 * When a (sub)object of non-array type `U` is specified to be initialized to
-a value `v`, or constructed from `args$$...$$`, `allocate_shared` shall
+a value `v`, or constructed from `args\...`, `allocate_shared` shall
 perform this initialization via the expression
 `std::allocator_traits<A2>::construct(a2, p, expr)` (where
-`_expr_` is `v` or `std::forward<Args>(args)$$...$$)` respectively), `p`
+`_expr_` is `v` or `std::forward<Args>(args)\...)` respectively), `p`
 points to storage suitable to hold an object of type `U`, and `a2` of
 type `A2` is a rebound copy `a` such that its `value_type` is `U`.
 * When a (sub)object of non-array type `U` is specified to be
@@ -183,7 +183,7 @@ template<class T, class A, class... Args>
 Remarks::: These overloads shall only participate in overload resolution when
 `T` is not an array type.
 Returns::: A `shared_ptr` to an object of type `T`, constructed from
-`args$$...$$`.
+`args\...`.
 Examples:::
 * `auto p = make_shared<int>();`
 * `auto p = make_shared<std::vector<int> >(16, 1);`
