--- a/doc/smart_ptr/make_unique.adoc
+++ b/doc/smart_ptr/make_unique.adoc
@@ -21,16 +21,16 @@ create `std::unique_ptr` objects.
 
 ## Rationale
 
-The C$$++$$11 standard introduced `std::unique_ptr` but did not provide any
+The {cpp}11 standard introduced `std::unique_ptr` but did not provide any
 `make_unique` utility like `std::make_shared` that provided the same
 exception safety and facility to avoid writing `new` expressions. Before it
-was implemented by some standard library vendors (and prior to the C$$++$$14
+was implemented by some standard library vendors (and prior to the {cpp}14
 standard introducing `std::make_unique`), this library provided it due to
 requests from users.
 
 This library also provides additional overloads of `make_unique` for
 default-initialization, when users do not need or want to incur the expense
-of value-initialization. The C$$++$$ standard does not yet provide this
+of value-initialization. The {cpp} standard does not yet provide this
 feature with `std::make_unique`.
 
 ## Synopsis
@@ -71,7 +71,7 @@ template<class T, class... Args>
 ::
 Remarks::: These overloads shall only participate in overload resolution when
 `T` is not an array type.
-Returns::: `std::unique_ptr<T>(new T(std::forward<Args>(args)$$...$$)`.
+Returns::: `std::unique_ptr<T>(new T(std::forward<Args>(args)\...)`.
 Example::: `auto p = make_unique<int>();`
 
 ```
